--- a/inde.html
+++ b/inde.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Practica If</title>
+<body>
+    <h1>Ejemplo de estructura de control If - Else - Else if</h1>
+    <p>Ejercicios Practicos</p>
+</body>
+</html>
